# cabot-navigation

./: .dockerignore  .gitignore  Dockerfile.navigation  README.md  all_test.sh  bake-docker.sh  build-docker.sh  dependency-override.repos  dependency-release.repos  dependency.repos  docker-compose-build.yaml  docker-compose-common-production.yaml  docker-compose-common.yaml  docker-compose-debug.yaml  docker-compose-exploration-production.yaml  docker-compose-exploration.yaml  docker-compose-headless.yaml  docker-compose-location-tools-prodimg.yaml  docker-compose-location-tools.yaml  docker-compose-prodimg-common.yaml  docker-compose-prodimg-headless.yaml  docker-compose-prodimg-production.yaml  docker-compose-prodimg.yaml  docker-compose-production.yaml  docker-compose-server-prodimg.yaml  docker-compose-server.yaml  docker-compose.yaml  launch.sh  manage-docker-image.sh  server-launch.sh  setup-sample-site.sh  tour-test.sh
cabot/: CMakeLists.txt  package.xml
cabot/config/: cabot-control.yaml
cabot/launch/: cabot2.launch.py  cabot_control.launch.py
cabot_diagnostics/: CMakeLists.txt
cabot_diagnostics/src/: cabot_analyzer.cpp  cabot_analyzer.hpp
cabot_exploration/: CMakeLists.txt  package.xml
cabot_exploration/configuration_files/: cartographer_2d_mapping.lua
cabot_exploration/launch/: cabot_exploration.launch.yaml
cabot_exploration/script/: cabot_exploration.py  cabot_exploration.sh
cabot_gazebo/: CMakeLists.txt  package.xml  plugin.xml
cabot_gazebo/cabot_gazebo/: battery.py  handle.py
cabot_gazebo/launch/: cabot2_gazebo.launch.py  gazebo_pressure_helper.launch.py  gazebo_wireless_helper.launch.py  spawn.launch.py
cabot_gazebo/params/: gazebo.params.yaml
cabot_gazebo/script/: battery_simulator.py  cabot_handle_simulator.py  check_gazebo_ready.py  gps_converter.py  pressure_simulator_node.py  wireless_abstract_simulator_node.py  wireless_rss_simulator_node.py  wireless_sample_simulator_node.py
cabot_mf_localization/: CMakeLists.txt
cabot_mf_localization/script/: cabot_mf_localization.sh  mapping_post_process.sh
cabot_navigation2/: CMakeLists.txt  controllers_plugins.xml  layers_plugins.xml  package.xml  planners_plugins.xml
cabot_navigation2/launch/: bringup_launch.py  controller_server_launch.py  grid_map_ground_filter_launch.py  livox_tag_filter_launch.py  ransac_ground_filter_launch.py
cabot_navigation2/params/: nav2_params.yaml  nav2_params2.yaml  nav2_params2_vlm_ranknav.yaml  nav2_params2_vlm_socialnav.yaml  nav2_params_bkup.yaml  nav2_params_bkup_update.yaml  nav2_params_old.yaml  nav2_params_sngnn.yaml  nav2_params_vlm_ranknav.yaml  nav2_params_vlm_socialnav.yaml
cabot_navigation2/plugins/: cabot_dwb_local_planner.cpp  cabot_hybrid_rl_controller.cpp  cabot_path_forward_planner.cpp  cabot_planner.cpp  cabot_planner_param.cpp  cabot_planner_util.cpp  cabot_rl_controller.cpp  cabot_rotation_shim_controller.cpp  cabot_sampling_MPC_controller copy.cpp  cabot_sampling_MPC_controller.cpp  cabot_simple_goal_checker.cpp  group_obstacle_layer.cpp  limit_fov_obstacle_layer.cpp  navcog_path_planner.cpp  navcog_path_util.cpp  personal_space_layer.cpp  temporal_obstacle_layer.cpp  util.cpp
cabot_navigation2/src/: abstract_ground_filter_node.cpp  cabot_scan.cpp  clip_ground_filter_node.cpp  grid_map_ground_filter_node.cpp  limit_fov_scan_expand.cpp  livox_pointcloud_filter_node.cpp  livox_tag_filter_node.cpp  ransac_ground_filter_node.cpp  remote_control_node.py  robot_following_node.py
cabot_navigation2/test/: README.md  cabot_planner_test.cpp  evaluation_metrics.py  evaluator.py  relative_comparison.py  run_test.py  school_bus.world  test-cases.yaml  test-map.xcf  test-map4.pgm  test-obstacle6.pgm  test-obstacle6.yaml  test.yaml  test_cabot_planner_util.cpp  test_util.cpp  test_util.test.py
cabot_sngnn/: package.xml  setup.cfg  setup.py
cabot_sngnn/cabot_sngnn/: sngnn_node.py
cabot_sngnn/launch/: sngnn.launch.py
cabot_sngnn_layer/: CMakeLists.txt  costmap_plugins.xml  package.xml
cabot_sngnn_layer/src/: cabot_sngnn_layer.cpp
cabot_ui/: CMakeLists.txt  README.md  package.xml
cabot_ui/cabot_ui/: __init__.py  buffer_proxy.py  cabot_rclpy_util.py  datautil.py  description.py  elevator_controller.py  event.py  exploration.py  geojson.py  geoutil.py  i18n.py  interface.py  local_vlm.py  menu.py  navgoal.py  navigation.py  nearby_detection.py  node_manager.py  param_manager.py  plugin.py  process_queue.py  social_navigation.py  status.py  stop_reasoner.py  turn_detector.py  visualizer.py
cabot_ui/config/: cabot2-ace_diagnostic.yaml  cabot2-common-mapping.yaml  cabot3-ace2_diagnostic.yaml  cabot3-k1_diagnostic.yaml  cabot3-k4_diagnostic.yaml  cabot_diagnostic.yaml  cabot_mapping_diagnostic.yaml  menu.yaml
cabot_ui/i18n/: en.yaml  ja.yaml  zh-CN.yaml
cabot_ui/launch/: cabot_diagnostic.launch.py  cabot_explore_exp1.launch.py  cabot_explore_exp2.launch.py  cabot_ext_ble.launch.py  cabot_ext_ble.launch.xml  cabot_gui.launch.py  cabot_menu.launch  cabot_ui.launch.py  teleop_gamepad.launch.py
cabot_ui/rviz/: nav2_default_view.rviz  nav2_default_view_fr1.rviz  nav2_default_view_local_fr1.rviz
cabot_ui/scripts/: cabot_keyboard.py  cabot_ui_manager.py  exploration_cancel.py  exploration_chat_flag.py  exploration_chat_server.py  exploration_image_explain.py  exploration_main_loop.py  list_plugins.py  navcog_map.py  stop_reasons_node.py
cabot_ui/src/: cabot_handle_v3_node.cpp  stop_reasoner.cpp  stop_reasoner.hpp  stop_reasons_node.cpp
cabot_ui/test/: CMakeLists.txt  stop_reasons.py  stop_reasons_node.cpp  test_event.py  test_geojson.py  test_geoutil.py  test_navgoal.py  test_navigation.py  (+2 more)
ios_msgs/: CMakeLists.txt  package.xml
mf_localization/: CMakeLists.txt  README.md
mf_localization_msgs/: CMakeLists.txt
nav2_local_to_global_layer/: CMakeLists.txt  package.xml  plugin.xml
pedestrian_plugin/: CMakeLists.txt  README.md  package.xml
pedestrian_plugin_msgs/: CMakeLists.txt  README.md  package.xml
queue_people_py/: CMakeLists.txt
rank_nav_msgs/: CMakeLists.txt  package.xml
wheelie_control/: CMakeLists.txt  package.xml
(+354 files in other folders)
